--- a/_posts/2020-01-03-the-us-narrative-today.html
+++ b/_posts/2020-01-03-the-us-narrative-today.html
@@ -1569,107 +1569,107 @@ stories:
   domain: http://www.dentonrc.com/
   link: https://dentonrc.com/opinion/editorials/welcome-refugees-and-the-benefits-they-bring-texas/article_4924c4d2-f80e-5be8-87d9-e4e0de6bf01d.html
 images:
-- name: mosaic-face-mosaic-face-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-colorful-dream.jpg
-- name: rain-princess-butterfly-purple-flower.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-butterfly-purple-flower.jpg
-- name: downtheline-downtheline-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-dark-dali.jpg
-- name: containership-containership-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-copper-circuit-2.jpg
-- name: lincoln-memorial-lincolnmemorial.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial.jpg
-- name: white-house-whitehouse-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-umberto-bocc.jpg
-- name: meadowbutterfly-meadow-butterfly-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-emily-carr.jpg
-- name: castle-wall-DSC-0067-umberto-bocc.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-umberto-bocc.JPG
-- name: mosaic-face-mosaic-face-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-far-away.jpg
-- name: rain-princess-P5290036.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-P5290036.jpg
-- name: school-clouds-church-clouds-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-creativity.jpg
-- name: mediterranean-mediterranean-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-blue-electricity.jpg
-- name: bf-skinner-old-broken-piano-street.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-old-broken-piano-street.jpg
-- name: fence-mexico-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-dark-dali.jpg
-- name: mediterranean-mediterranean-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-smooth-ride.jpg
-- name: walled-garden-walled-garden-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-green-zuma.jpg
-- name: old-cabin-oldcabin-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-crunch-paper.jpg
-- name: aws-s3-stories-border-traffic.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-border-traffic.jpg
-- name: downtheline-downtheline-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-ww2-dresden.jpg
-- name: stalin-time-crow-stkump-waterfront.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-crow-stkump-waterfront.jpg
-- name: copper-circuit-crow-stailess-steal.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-crow-stailess-steal.jpg
-- name: oldroad-old-road-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-oily-mcoilface.jpg
-- name: miamibeach-miamibeach-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-kandinsky-bv.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-plentiful.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-plentiful.JPG
-- name: razorcliff-razorcliff-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-smooth-ride.jpg
-- name: hollywood-building-hollywood-building-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-mucha-mult.jpg
-- name: adam-smith-adam-smith-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-gan-vogh.jpg
-- name: flower-barbed-wire-flower-barbed-wire-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-clean-view.jpg
-- name: windowmountain-window-mountain-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-smooth-ride.jpg
-- name: oldhotel-oldhotel-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-gred-mash.jpg
-- name: downtheline-downtheline-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-kand-two.jpg
-- name: walled-garden-walled-garden-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-rainbow-festival.jpg
-- name: cargo-ship-cargo-ship-on-sea-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-crabapple.jpg
-- name: border-fence-border-fence-on-hill-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-alien-goggles.jpg
-- name: mistywoods-babyfoot-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-sand-paper.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-mucha-mult.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-mucha-mult.JPG
-- name: liberty-back-statue-liberty-back-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-mucha-mult.jpg
-- name: crow-crow-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-yellow-paper.jpg
-- name: beach-clouds-lifeguard-beachclouds-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-atari-missle.jpg
-- name: castle-wall-DSC-0067-purp-paper.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-purp-paper.JPG
-- name: server-cloud-server-racks-clouds-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-atari-missle.jpg
-- name: stalin-time-sub-way-bart-going-by.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-sub-way-bart-going-by.jpg
-- name: fence-mexico-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-blue-circuit.jpg
-- name: nazi-invasion-ship-bird-foreground.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-ship-bird-foreground.jpg
-- name: downtheline-downtheline-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-spagetti-accident.jpg
-- name: downtown-los-angeles-downtown-la-plentiful.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-plentiful.JPG
-- name: old-church-oldchurch-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-aqua.jpg
-- name: bf-skinner-old-barn-falling-over.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-old-barn-falling-over.jpg
-- name: server-cloud-server-racks-clouds-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-graham-sutherland.jpg
-- name: la-muse-city-vancouver-clouds.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-city-vancouver-clouds.jpg
+- name: capital-battle-capitolbattle-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-dali-three.jpg
+- name: old-barn-old-barn-1500-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-purple-storm.jpg
+- name: carry-load-carryload-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-emily-carr.jpg
+- name: power-lines-power-lines-empty-space-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-cinnamon-rolls.jpg
+- name: meadowbutterfly-meadow-butterfly-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-blue-circuit.jpg
 - name: miamibeach-miamibeach-pablo-blue.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-pablo-blue.jpg
+- name: liberty-back-statue-liberty-back-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-kandinsky-bv.jpg
+- name: ellis-island-ellisisland-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-matrix.jpg
+- name: old-granary-field-oldhouse-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-graham-sutherland.jpg
+- name: scream-IMG_7788.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_7788.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-monet-one.jpg
+- name: bf-skinner-firetruck-bright-sun.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-firetruck-bright-sun.jpg
+- name: subway-subway-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-really-hot.jpg
+- name: statue-of-liberty-front-view-statueofliberty-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-blue-granite.jpg
+- name: ellis-island-ellisisland-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-pablo-blue.jpg
+- name: curtain-curtain-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-plentiful.jpg
+- name: carry-load-carryload-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-purp-paper.jpg
+- name: stories-G0520270-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-G0520270-blue-circuit.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-pablo-blue.jpg
+- name: bluelake-dry-skin-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-dry-skin-file-00-00-00-00.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-bright-sand.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-bright-sand.png
+- name: bluelake-gred-mash-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-gred-mash-file-00-00-00-00.jpg
+- name: mistywoods-babyfoot-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-alien-goggles.jpg
+- name: bf-skinner-early-computer-bletchley.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-early-computer-bletchley.jpg
+- name: rain-princess-DSC_0036.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-DSC_0036.jpg
+- name: old-granary-field-oldhouse-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-gred-mash.jpg
+- name: oldcabin-store-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-cinnamon-rolls.jpg
+- name: stories-new-27-93-800-500-0-max-0--1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-27-93-800-500-0-max-0--1--1.jpg
+- name: amusement-park-amusement-park-2-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-blue-electricity.jpg
+- name: bluelake-post-modern-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-post-modern-file-00-00-00-00.jpg
+- name: yosemite-yosemite-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-kand-two.jpg
+- name: razorcliff-razorcliff-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-post-modern.jpg
+- name: legal-statue-legalstatue-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-creativity.jpg
+- name: stories-oldgaspumps-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-oldgaspumps-umberto-bocc.jpg
+- name: old-door-lock-old-door-lock-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-smooth-ride.jpg
+- name: downtown-los-angeles-downtown-la-emily-carr.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-emily-carr.JPG
+- name: bf-skinner-water-splashing-in-rocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-water-splashing-in-rocks.jpg
+- name: store-on-corner-store-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-atari-asteroids.jpg
+- name: amusement-park-amusement-park-2-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-dry-skin.jpg
+- name: gears-4882162452-fa3126b38d-b-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-smoking-cigarette.jpg
+- name: white-house-lawn-white-house-lawn-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-rainbow-festival.jpg
+- name: dragon-desert-desert-dragon-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-feed-people.jpg
+- name: trucksilo-trucksilo-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-plentiful.jpg
+- name: fence-mexico-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-emily-carr.jpg
+- name: copper-circuit-DSC_0001.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-DSC_0001.jpg
+- name: store-on-corner-oldcabin-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-post-modern.jpg
+- name: stalin-time-new-york-city-skyline_36655833162_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-new-york-city-skyline_36655833162_o.jpg
+- name: old-school-house-old-schoolhouse-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-blue-electricity.jpg
+- name: downtheline-downtheline-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-sunday.jpg
+- name: berlinwall-DSC-0084-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-emily-carr.jpg
+- name: old-church-oldchurch-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-dark-rain.jpg
 ---
 Timberwolves Win 3rd Straight, Beat Warriors.&nbsp;Barron County Law Enforcement Busy New Year's Eve.&nbsp;Hoosiers Falter Late In Gator Bowl Loss.&nbsp;Officer Cleared After Man Booked Into Jail With Neck Brace.&nbsp;Mental Tests Ordered For Man Accused Of Killing Iowa Pastor.&nbsp;Virginia Press Foundation Focuses On Future Of Journalism.&nbsp;Villa Loses Injured Pair Heaton, Wesley For Rest Of Season.&nbsp;Villa Loses Injured Pair Heaton, Wesley For Rest Of Season.&nbsp;
